# rss2article

./: .gitignore  README.md  pyproject.toml
old/src/buzzter_agent/: state.py
old/src/buzzter_agent/models/: __init__.py  article.py  notis.py
old/src/buzzter_agent/nodes/: fulltext.py  relevance.py
old/src/scripts/: run_local.py
scripts/: run_dev.sh  setup_env.sh
src/buzzter_agent/: graph.py
src/buzzter_agent/nodes/: notis.py  qa.py  rss.py
src/rss2article/: __main__.py  config.py  logging.py  main.py
src/rss2article/clients/: openai.py  rss.py
src/rss2article/db/: engine.py  init_db.py  mappers.py  models.py  session.py
src/rss2article/db/repositories/: feed_items.py  feeds.py  relevance.py
src/rss2article/domain/: __init__.py  models.py
src/rss2article/services/: ingest.py  relevance.py
src/rss2article/utils/: datetime.py  html.py
