[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rss2article"
version = "0.0.1"
requires-python = "==3.12.3"
dependencies = [
    "pydantic==2.12.5",
    "feedparser==6.0.12",
    "beautifulsoup4==4.14.3",
    "sqlalchemy==2.0.45",
    "pydantic-settings==2.12.0",
    "asyncpg==0.31.0",
]
